deploy: fcfeda2709b2f9c35f5e24e9305840cef64b3b8d

--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; coolpropx v0.2.12 documentation</title>
+    <title>Index &#8212; coolpropx v0.2.13 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="_static/documentation_options.js?v=192e09c8"></script>
+    <script src="_static/documentation_options.js?v=a2d28bd5"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">coolpropx v0.2.12 documentation</p>
+    <p class="title logo__title">coolpropx v0.2.13 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -329,35 +329,15 @@ document.write(`
       <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.calculate_mixture_properties">calculate_mixture_properties() (in module coolpropx.core_calculations)</a>
 </li>
       <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.calculate_properties_hP">calculate_properties_hP() (in module coolpropx.perfect_gas.perfect_gas)</a>
-
-      <ul>
-        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#coolpropx.perfect_gas.perfect_gas_props_functions.calculate_properties_hP">(in module coolpropx.perfect_gas.perfect_gas_props_functions)</a>
 </li>
-      </ul></li>
       <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.calculate_properties_hs">calculate_properties_hs() (in module coolpropx.perfect_gas.perfect_gas)</a>
-
-      <ul>
-        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#coolpropx.perfect_gas.perfect_gas_props_functions.calculate_properties_hs">(in module coolpropx.perfect_gas.perfect_gas_props_functions)</a>
 </li>
-      </ul></li>
       <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.calculate_properties_Ps">calculate_properties_Ps() (in module coolpropx.perfect_gas.perfect_gas)</a>
-
-      <ul>
-        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#coolpropx.perfect_gas.perfect_gas_props_functions.calculate_properties_Ps">(in module coolpropx.perfect_gas.perfect_gas_props_functions)</a>
 </li>
-      </ul></li>
       <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.calculate_properties_PT">calculate_properties_PT() (in module coolpropx.perfect_gas.perfect_gas)</a>
-
-      <ul>
-        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#coolpropx.perfect_gas.perfect_gas_props_functions.calculate_properties_PT">(in module coolpropx.perfect_gas.perfect_gas_props_functions)</a>
 </li>
-      </ul></li>
       <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.calculate_properties_rhoh">calculate_properties_rhoh() (in module coolpropx.perfect_gas.perfect_gas)</a>
-
-      <ul>
-        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#coolpropx.perfect_gas.perfect_gas_props_functions.calculate_properties_rhoh">(in module coolpropx.perfect_gas.perfect_gas_props_functions)</a>
 </li>
-      </ul></li>
       <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.calculate_subcooling">calculate_subcooling() (in module coolpropx.core_calculations)</a>
 </li>
       <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.calculate_superheating">calculate_superheating() (in module coolpropx.core_calculations)</a>
@@ -367,6 +347,8 @@ document.write(`
       <li><a href="source/api/coolpropx.utils.html#coolpropx.utils.check_lists_match">check_lists_match() (in module coolpropx.utils)</a>
 </li>
       <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.compute_dsdp_q">compute_dsdp_q() (in module coolpropx.core_calculations)</a>
+</li>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.compute_perfect_gas_constants">compute_perfect_gas_constants() (in module coolpropx.perfect_gas.perfect_gas)</a>
 </li>
       <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.compute_properties">compute_properties() (in module coolpropx.core_calculations)</a>
 </li>
@@ -388,10 +370,10 @@ document.write(`
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.compute_quality_grid">compute_quality_grid() (in module coolpropx.fluid_properties)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.compute_saturation_line">compute_saturation_line() (in module coolpropx.fluid_properties)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.compute_spinodal_line">compute_spinodal_line() (in module coolpropx.fluid_properties)</a>
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.compute_spinodal_point">compute_spinodal_point() (in module coolpropx.fluid_properties)</a>
@@ -457,13 +439,6 @@ document.write(`
 </li>
       </ul></li>
       <li>
-    coolpropx.perfect_gas.perfect_gas_props_functions
-
-      <ul>
-        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#module-coolpropx.perfect_gas.perfect_gas_props_functions">module</a>
-</li>
-      </ul></li>
-      <li>
     coolpropx.utils
 
       <ul>
@@ -484,9 +459,11 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.entropy_from_PT">entropy_from_PT() (in module coolpropx.perfect_gas.perfect_gas)</a>
 </li>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.entropy_from_rhoP">entropy_from_rhoP() (in module coolpropx.perfect_gas.perfect_gas)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.entropy_from_rhoP">entropy_from_rhoP() (in module coolpropx.perfect_gas.perfect_gas)</a>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.estimate_sutherland_constant">estimate_sutherland_constant() (in module coolpropx.perfect_gas.perfect_gas)</a>
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.extract_vars">extract_vars() (in module coolpropx.fluid_properties)</a>
 </li>
@@ -584,8 +561,6 @@ document.write(`
 </li>
         <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#module-coolpropx.perfect_gas.perfect_gas">coolpropx.perfect_gas.perfect_gas</a>
 </li>
-        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#module-coolpropx.perfect_gas.perfect_gas_props_functions">coolpropx.perfect_gas.perfect_gas_props_functions</a>
-</li>
         <li><a href="source/api/coolpropx.utils.html#module-coolpropx.utils">coolpropx.utils</a>
 </li>
       </ul></li>
@@ -595,6 +570,8 @@ document.write(`
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.perfect_gas_gradient">perfect_gas_gradient() (in module coolpropx.perfect_gas.perfect_gas)</a>
+</li>
       <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.perfect_gas_props">perfect_gas_props() (in module coolpropx.perfect_gas.perfect_gas)</a>
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.Fluid.plot_phase_diagram">plot_phase_diagram() (coolpropx.fluid_properties.Fluid method)</a>
@@ -633,10 +610,10 @@ document.write(`
 </li>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.sigmoid_smootherstep">sigmoid_smootherstep() (in module coolpropx.math)</a>
 </li>
-      <li><a href="source/api/coolpropx.math.html#coolpropx.math.sigmoid_smoothstep">sigmoid_smoothstep() (in module coolpropx.math)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/coolpropx.math.html#coolpropx.math.sigmoid_smoothstep">sigmoid_smoothstep() (in module coolpropx.math)</a>
+</li>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.sind">sind() (in module coolpropx.math)</a>
 </li>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.smooth_abs">smooth_abs() (in module coolpropx.math)</a>
@@ -646,11 +623,7 @@ document.write(`
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.smooth_minimum">smooth_minimum() (in module coolpropx.math)</a>
 </li>
       <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.specific_heat">specific_heat() (in module coolpropx.perfect_gas.perfect_gas)</a>
-
-      <ul>
-        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#coolpropx.perfect_gas.perfect_gas_props_functions.specific_heat">(in module coolpropx.perfect_gas.perfect_gas_props_functions)</a>
 </li>
-      </ul></li>
       <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.speed_of_sound_from_T">speed_of_sound_from_T() (in module coolpropx.perfect_gas.perfect_gas)</a>
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.states_to_dict">states_to_dict() (in module coolpropx.fluid_properties)</a>
