--- a/_modules/coolpropx/fluid_properties.html
+++ b/_modules/coolpropx/fluid_properties.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>coolpropx.fluid_properties &#8212; coolpropx v0.2.12 documentation</title>
+    <title>coolpropx.fluid_properties &#8212; coolpropx v0.2.13 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="../../_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="../../_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="../../_static/documentation_options.js?v=192e09c8"></script>
+    <script src="../../_static/documentation_options.js?v=a2d28bd5"></script>
     <script src="../../_static/doctools.js?v=9a2dae69"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">coolpropx v0.2.12 documentation</p>
+    <p class="title logo__title">coolpropx v0.2.13 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -279,7 +279,7 @@ document.write(`
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">functools</span><span class="w"> </span><span class="kn">import</span> <span class="n">wraps</span>
 
-<span class="kn">from</span><span class="w"> </span><span class="nn">.</span><span class="w"> </span><span class="kn">import</span> <span class="n">core_calculations</span> <span class="k">as</span> <span class="n">props</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">.</span><span class="w"> </span><span class="kn">import</span> <span class="n">core_calculations</span> <span class="k">as</span> <span class="n">props</span><span class="p">,</span> <span class="n">GAS_CONSTANT</span><span class="p">,</span> <span class="n">PROPERTY_ALIAS</span>
 
 
 <span class="n">MEANLINE_PROPERTIES</span> <span class="o">=</span> <span class="p">[</span>
