deploy: 7ee35d5ecf4567cefc17e848e36490eacbd3b025

--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; coolpropx v0.2.13 documentation</title>
+    <title>Index &#8212; coolpropx v0.2.14 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="_static/documentation_options.js?v=a2d28bd5"></script>
+    <script src="_static/documentation_options.js?v=37c70904"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">coolpropx v0.2.13 documentation</p>
+    <p class="title logo__title">coolpropx v0.2.14 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -372,12 +372,12 @@ document.write(`
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.compute_saturation_line">compute_saturation_line() (in module coolpropx.fluid_properties)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.compute_spinodal_line">compute_spinodal_line() (in module coolpropx.fluid_properties)</a>
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.compute_spinodal_point">compute_spinodal_point() (in module coolpropx.fluid_properties)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.compute_spinodal_point_general">compute_spinodal_point_general() (in module coolpropx.fluid_properties)</a>
 </li>
       <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.conductivity_from_T">conductivity_from_T() (in module coolpropx.perfect_gas.perfect_gas)</a>
@@ -415,6 +415,20 @@ document.write(`
 
       <ul>
         <li><a href="source/api/coolpropx.jax_import.html#module-coolpropx.jax_import">module</a>
+</li>
+      </ul></li>
+      <li>
+    coolpropx.jaxprop
+
+      <ul>
+        <li><a href="source/api/coolpropx.jaxprop.html#module-coolpropx.jaxprop">module</a>
+</li>
+      </ul></li>
+      <li>
+    coolpropx.jaxprop.jaxprop
+
+      <ul>
+        <li><a href="source/api/coolpropx.jaxprop.jaxprop.html#module-coolpropx.jaxprop.jaxprop">module</a>
 </li>
       </ul></li>
       <li>
@@ -554,6 +568,10 @@ document.write(`
         <li><a href="source/api/coolpropx.graphics.html#module-coolpropx.graphics">coolpropx.graphics</a>
 </li>
         <li><a href="source/api/coolpropx.jax_import.html#module-coolpropx.jax_import">coolpropx.jax_import</a>
+</li>
+        <li><a href="source/api/coolpropx.jaxprop.html#module-coolpropx.jaxprop">coolpropx.jaxprop</a>
+</li>
+        <li><a href="source/api/coolpropx.jaxprop.jaxprop.html#module-coolpropx.jaxprop.jaxprop">coolpropx.jaxprop.jaxprop</a>
 </li>
         <li><a href="source/api/coolpropx.math.html#module-coolpropx.math">coolpropx.math</a>
 </li>
