--- a/_modules/coolpropx/fluid_properties.html
+++ b/_modules/coolpropx/fluid_properties.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>coolpropx.fluid_properties &#8212; coolpropx v0.2.13 documentation</title>
+    <title>coolpropx.fluid_properties &#8212; coolpropx v0.2.14 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="../../_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="../../_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="../../_static/documentation_options.js?v=a2d28bd5"></script>
+    <script src="../../_static/documentation_options.js?v=37c70904"></script>
     <script src="../../_static/doctools.js?v=9a2dae69"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">coolpropx v0.2.13 documentation</p>
+    <p class="title logo__title">coolpropx v0.2.14 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -544,6 +544,9 @@ document.write(`
         <span class="bp">self</span><span class="o">.</span><span class="n">p_max</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_AS</span><span class="o">.</span><span class="n">pmax</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">T_min</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_AS</span><span class="o">.</span><span class="n">Tmin</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">T_max</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_AS</span><span class="o">.</span><span class="n">Tmax</span><span class="p">()</span>
+
+        <span class="c1"># # Define reference state</span>
+        <span class="c1"># self.reference_state = self.critical_point</span>
 
     <span class="k">def</span><span class="w"> </span><span class="nf">_compute_critical_point</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Calculate the properties at the critical point&quot;&quot;&quot;</span>
@@ -1315,6 +1318,8 @@ document.write(`
 <span class="c1">#     for field in states[0].keys():</span>
 <span class="c1">#         state_dict[field] = np.array([getattr(state, field) for state in states])</span>
 <span class="c1">#     return state_dict</span>
+
+
 <div class="viewcode-block" id="states_to_dict">
 <a class="viewcode-back" href="../../source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.states_to_dict">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">states_to_dict</span><span class="p">(</span><span class="n">states</span><span class="p">):</span>
@@ -1333,6 +1338,9 @@ document.write(`
 <span class="sd">        Nested dictionary where leaf nodes are 1D numpy arrays of field values.</span>
 <span class="sd">        Missing keys are filled with NaN or None.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
+    <span class="c1"># from .jax_import import jax, jnp, JAX_AVAILABLE</span>
+    <span class="c1"># np = jnp</span>
+
     <span class="kn">from</span><span class="w"> </span><span class="nn">collections.abc</span><span class="w"> </span><span class="kn">import</span> <span class="n">Mapping</span>
 
     <span class="k">def</span><span class="w"> </span><span class="nf">extract_value</span><span class="p">(</span><span class="n">state</span><span class="p">,</span> <span class="n">key</span><span class="p">):</span>
