--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; coolpropx v0.2.14 documentation</title>
+    <title>Index &#8212; coolpropx v0.2.15 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="_static/documentation_options.js?v=37c70904"></script>
+    <script src="_static/documentation_options.js?v=8c3b8b19"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">coolpropx v0.2.14 documentation</p>
+    <p class="title logo__title">coolpropx v0.2.15 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -332,6 +332,8 @@ document.write(`
 </li>
       <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.calculate_supersaturation">calculate_supersaturation() (in module coolpropx.core_calculations)</a>
 </li>
+      <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.calculate_trimmed_quality">calculate_trimmed_quality() (in module coolpropx.core_calculations)</a>
+</li>
       <li><a href="source/api/coolpropx.utils.html#coolpropx.utils.check_lists_match">check_lists_match() (in module coolpropx.utils)</a>
 </li>
       <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.compute_dsdp_q">compute_dsdp_q() (in module coolpropx.core_calculations)</a>
@@ -356,10 +358,10 @@ document.write(`
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.compute_quality_grid">compute_quality_grid() (in module coolpropx.fluid_properties)</a>
 </li>
-      <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.compute_saturation_line">compute_saturation_line() (in module coolpropx.fluid_properties)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.compute_saturation_line">compute_saturation_line() (in module coolpropx.fluid_properties)</a>
+</li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.compute_spinodal_line">compute_spinodal_line() (in module coolpropx.fluid_properties)</a>
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.compute_spinodal_point">compute_spinodal_point() (in module coolpropx.fluid_properties)</a>
