--- a/_modules/index.html
+++ b/_modules/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Overview: module code &#8212; coolpropx v0.2.16 documentation</title>
+    <title>Overview: module code &#8212; coolpropx v0.2.18 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="../_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="../_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="../_static/documentation_options.js?v=9b4f0b7f"></script>
+    <script src="../_static/documentation_options.js?v=6a15089c"></script>
     <script src="../_static/doctools.js?v=9a2dae69"></script>
     <script src="../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">coolpropx v0.2.16 documentation</p>
+    <p class="title logo__title">coolpropx v0.2.18 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -271,10 +271,14 @@ document.write(`
                 <article class="bd-article">
                   
   <h1>All modules for which code is available</h1>
-<ul><li><a href="coolpropx/core_calculations.html">coolpropx.core_calculations</a></li>
+<ul><li><a href="coolpropx/bicubic/bicubic_interpolant_property.html">coolpropx.bicubic.bicubic_interpolant_property</a></li>
+<li><a href="coolpropx/bicubic/generate_tables.html">coolpropx.bicubic.generate_tables</a></li>
+<li><a href="coolpropx/bicubic/jax_bicubic_HEOS_interpolation_1.html">coolpropx.bicubic.jax_bicubic_HEOS_interpolation_1</a></li>
+<li><a href="coolpropx/core_calculations.html">coolpropx.core_calculations</a></li>
 <li><a href="coolpropx/fluid_properties.html">coolpropx.fluid_properties</a></li>
 <li><a href="coolpropx/graphics.html">coolpropx.graphics</a></li>
 <li><a href="coolpropx/math.html">coolpropx.math</a></li>
+<li><a href="coolpropx/perfect_gas/perfect_gas.html">coolpropx.perfect_gas.perfect_gas</a></li>
 <li><a href="coolpropx/utils.html">coolpropx.utils</a></li>
 </ul>
 
