deploy: 3744599065c5e94cff9390cf999d3dd0a6b84fea

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -271,15 +271,18 @@ document.write(`
                 <article class="bd-article">
                   
   <h1>All modules for which code is available</h1>
-<ul><li><a href="coolpropx/bicubic/bicubic_interpolant_property.html">coolpropx.bicubic.bicubic_interpolant_property</a></li>
-<li><a href="coolpropx/bicubic/generate_tables.html">coolpropx.bicubic.generate_tables</a></li>
-<li><a href="coolpropx/bicubic/jax_bicubic_HEOS_interpolation_1.html">coolpropx.bicubic.jax_bicubic_HEOS_interpolation_1</a></li>
-<li><a href="coolpropx/core_calculations.html">coolpropx.core_calculations</a></li>
-<li><a href="coolpropx/fluid_properties.html">coolpropx.fluid_properties</a></li>
-<li><a href="coolpropx/graphics.html">coolpropx.graphics</a></li>
-<li><a href="coolpropx/math.html">coolpropx.math</a></li>
-<li><a href="coolpropx/perfect_gas/perfect_gas.html">coolpropx.perfect_gas.perfect_gas</a></li>
-<li><a href="coolpropx/utils.html">coolpropx.utils</a></li>
+<ul><li><a href="jaxprop/components/nozzle_model_core.html">jaxprop.components.nozzle_model_core</a></li>
+<li><a href="jaxprop/components/nozzle_model_solver.html">jaxprop.components.nozzle_model_solver</a></li>
+<li><a href="jaxprop/coolprop/core_calculations.html">jaxprop.coolprop.core_calculations</a></li>
+<li><a href="jaxprop/coolprop/fluid_properties.html">jaxprop.coolprop.fluid_properties</a></li>
+<li><a href="jaxprop/coolprop/jax_wrapper.html">jaxprop.coolprop.jax_wrapper</a></li>
+<li><a href="jaxprop/coolprop/jax_wrapper_working.html">jaxprop.coolprop.jax_wrapper_working</a></li>
+<li><a href="jaxprop/graphics.html">jaxprop.graphics</a></li>
+<li><a href="jaxprop/helpers_coolprop.html">jaxprop.helpers_coolprop</a></li>
+<li><a href="jaxprop/helpers_jax.html">jaxprop.helpers_jax</a></li>
+<li><a href="jaxprop/math.html">jaxprop.math</a></li>
+<li><a href="jaxprop/perfect_gas/perfect_gas.html">jaxprop.perfect_gas.perfect_gas</a></li>
+<li><a href="jaxprop/utils.html">jaxprop.utils</a></li>
 </ul>
 
                 </article>
