--- a/_modules/index.html
+++ b/_modules/index.html
@@ -293,12 +293,14 @@ document.write(`
                 <article class="bd-article">
                   
   <h1>All modules for which code is available</h1>
-<ul><li><a href="jaxprop/components/nozzle_model_core.html">jaxprop.components.nozzle_model_core</a></li>
+<ul><li><a href="jaxprop/bicubic/bicubic_interpolant_property.html">jaxprop.bicubic.bicubic_interpolant_property</a></li>
+<li><a href="jaxprop/bicubic/generate_tables.html">jaxprop.bicubic.generate_tables</a></li>
+<li><a href="jaxprop/bicubic/jax_bicubic_HEOS_interpolation_1.html">jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1</a></li>
+<li><a href="jaxprop/components/nozzle_model_core.html">jaxprop.components.nozzle_model_core</a></li>
 <li><a href="jaxprop/components/nozzle_model_solver.html">jaxprop.components.nozzle_model_solver</a></li>
 <li><a href="jaxprop/coolprop/core_calculations.html">jaxprop.coolprop.core_calculations</a></li>
 <li><a href="jaxprop/coolprop/fluid_properties.html">jaxprop.coolprop.fluid_properties</a></li>
 <li><a href="jaxprop/coolprop/jax_wrapper.html">jaxprop.coolprop.jax_wrapper</a></li>
-<li><a href="jaxprop/coolprop/jax_wrapper_working.html">jaxprop.coolprop.jax_wrapper_working</a></li>
 <li><a href="jaxprop/graphics.html">jaxprop.graphics</a></li>
 <li><a href="jaxprop/helpers_coolprop.html">jaxprop.helpers_coolprop</a></li>
 <li><a href="jaxprop/helpers_jax.html">jaxprop.helpers_jax</a></li>
